[package]
name = "sciter-gamemaker"
version = "0.1.0"
authors = ["GirkovArpa <GirkovArpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
winapi = { version = "*", features = ["winuser","libloaderapi"] }
libc = "*"

[lib]
crate-type = ["cdylib"]